--- a/src/components/TitleBar/TitleBar.scss
+++ b/src/components/TitleBar/TitleBar.scss
@@ -29,7 +29,26 @@
         width: 16px;
         height: 14px;
         background-color: #C0C0C0;
-        border-top: 1px solid #FFF;
+        border-top: 2px solid #FFF;
+        border-left: 2px solid #FFF;
+        border-right: 2px solid #000;
+        border-bottom: 2px solid #000;
+        box-shadow:
+        inset 2px 2px #DFDFDF,
+        inset -2px -2px #808080,
+
+        // &:before {
+        //     background: none;
+        //     content: "";
+        //     border-top: 1px solid #0d0c0c;
+        //     border-left: 1px solid #b32f2f;
+        //     display: block;
+        //     position: absolute;
+        //     top: 4px;
+        //     left: 4px;
+        //     right: 4px;
+        //     bottom: 4px;
+        // }
     }
 }
 
