--- a/src/App.scss
+++ b/src/App.scss
@@ -10,5 +10,19 @@
     width: 825px;
     height: 625px;
     background-color: #C0C0C0;
+    border-top: 2px solid #FFF;
+    border-left: 2px solid #FFF;
+    border-right: 2px solid #000;
+    border-bottom: 2px solid #000;
+    box-shadow:
+      inset 2px 2px #DFDFDF,
+      inset -2px -2px #808080;
   }
+}
+
+hr {
+  border: none;
+  border-top: 2px solid #808080;
+  border-bottom: 2px solid #000;
+  margin: auto 2px;
 }
