--- a/src/components/TitleBar/TitleBar.scss
+++ b/src/components/TitleBar/TitleBar.scss
@@ -2,10 +2,11 @@
     &-container {
         background: linear-gradient(90deg, #000080 0%, #1084D0 100%);
         height: 20px;
-        width: 100;
         display: flex;
         flex-direction: row;
         margin: 2px;
+        margin-bottom: 0;
+        border: 2px solid #C0C0C0;
         justify-content: space-between;
     }
 
@@ -35,20 +36,39 @@
         border-bottom: 2px solid #000;
         box-shadow:
         inset 2px 2px #DFDFDF,
-        inset -2px -2px #808080,
+        inset -2px -2px #808080;
 
-        // &:before {
-        //     background: none;
-        //     content: "";
-        //     border-top: 1px solid #0d0c0c;
-        //     border-left: 1px solid #b32f2f;
-        //     display: block;
-        //     position: absolute;
-        //     top: 4px;
-        //     left: 4px;
-        //     right: 4px;
-        //     bottom: 4px;
-        // }
+        &.close, &.maximize, &.minimize {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &.close img {
+            width: 8px;
+            height: 7px;
+        }
+
+        &.maximize {
+            margin-right: 2px;
+            img {
+                width: 9px;
+                height: 9px;
+            }
+        }
+        
+
+        &.minimize {
+            position: relative;
+            img {
+                position: absolute;
+                bottom: 3px;
+                left: 4px;
+                width: 6px;
+                height: 2px;
+            }
+        }
+        
     }
 }
 
