:lipstick: Title Bar CSS pixel values replaced with SASS variables

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
   align-items: center;
 
   .spotify-container {
-    width: 825px;
+    width: 55rem;
     height: 625px;
     background-color: #C0C0C0;
     border-top: 1.5px solid #FFF;
