--- a/src/App.scss
+++ b/src/App.scss
@@ -35,6 +35,24 @@ $negativeBorderSize: -2px;
         .spotify-left-side {
           width: 20%;
           margin: 0 4px;
+
+          .left-side-navigation {
+            .main-navigation {
+              margin-bottom: 6px;
+
+              & > * {
+                margin-bottom: 3px;
+              }
+            }
+
+            .user-navigation {
+              margin: 6px 0;
+
+              & > * {
+                margin-bottom: 6px;
+              }
+            }
+          }
         }
       }
   }
@@ -44,7 +62,7 @@ hr {
   border: none;
   border-top: 1px solid #FFF;
   border-bottom: 1px solid #808080;
-  margin: auto 1px;
+  margin: auto;
 }
 
 hr.title-bar-divider {
