--- a/src/App.scss
+++ b/src/App.scss
@@ -16,22 +16,21 @@ $negativeBorderSize: -2px;
   .spotify-container {
     width: 58rem;
     background-color: #C0C0C0;
-    border-top: $borderSize solid #FFF;
-    border-left: $borderSize solid #FFF;
-    border-right: $borderSize solid #000;
-    border-bottom: $borderSize solid #000;
-    box-shadow:
-      inset $borderSize $borderSize #DFDFDF,
-      inset $negativeBorderSize $negativeBorderSize #808080;
 
-      .spotify-main-container {
-        width: auto;
-        height: 41rem;
-        background-color: #C0C0C0;
-        margin: $borderSize;
-        margin-top: $borderSize * 4;
-        border: $borderSize solid #C0C0C0;
+    .spotify-main-container {
+      width: auto;
+      height: 41rem;
+      background-color: #C0C0C0;
+      margin: $borderSize;
+      margin-top: $borderSize * 4;
+      border: $borderSize solid #C0C0C0;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      .spotify-left-right-container {
         display: flex;
+        width: 100%;
 
         .spotify-left-side {
           width: 20%;
@@ -41,26 +40,48 @@ $negativeBorderSize: -2px;
             .main-navigation {
               margin-bottom: 6px;
 
-              & > * {
+              &>* {
                 margin-bottom: 3px;
-              }
-
-              & a.active {
-                
               }
             }
 
             .user-navigation {
               margin: 6px 0;
 
-              & > .navigation-button {
+              &>.navigation-button {
                 margin-bottom: 6px;
               }
             }
           }
         }
       }
+
+      .spotify-player-block {
+        height: 4.5rem;
+        margin: 4px;
+      }
+    }
   }
+}
+
+.border {
+  border-top: $borderSize solid #FFF;
+  border-left: $borderSize solid #FFF;
+  border-right: $borderSize solid #000;
+  border-bottom: $borderSize solid #000;
+  box-shadow:
+    inset $borderSize $borderSize #DFDFDF,
+    inset $negativeBorderSize $negativeBorderSize #808080;
+}
+
+.active-border {
+  border-top: $borderSize solid #000;
+  border-left: $borderSize solid #000;
+  border-right: $borderSize solid #FFF;
+  border-bottom: $borderSize solid #FFF;
+  box-shadow:
+    inset $borderSize $borderSize #808080,
+    inset $negativeBorderSize $negativeBorderSize #DFDFDF;
 }
 
 a {
