--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@
 }
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'MSSansSerif', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
