:lipstick: Player integration done

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -6,7 +6,19 @@
     align-items: center;
     margin-right: 3px;
 
-    img {
+    .shuffle {
         height: 15px
+    }
+
+    .backward, .forward {
+        height: 12px
+    }
+
+    .play {
+        height: 10px
+    }
+
+    .loop {
+        height: 14px
     }
 }
