--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -1,18 +1,15 @@
-$borderSize: 2px;
-$negativeBorderSize: 2px;
-
 .player-container {
     margin: 6px;
-    // height: calc(4rem - 4px);
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 
     .player-song-info {
         display: flex;
-        width: 20rem;
+
         .song-icon {
             height: 3.5rem;
-            width: 3.5rem;
+            min-width: 3.5rem;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -38,20 +35,69 @@ $negativeBorderSize: 2px;
     }
 
     .player-main {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        min-width: 25rem;
+
         .song-buttons {
             display: flex;
         }
+
+        .song-length {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 6px;
+    
+            .length-start, .length-end {
+                font-size: 0.8rem;
+            }
+
+        }
+    }
+
+    .player-volume {
+        display: flex;
+        flex-direction: row;
+        width: 8rem;
+        align-items: center;
+
+        .volume-icon {
+            height: 1rem;
+        }
+    }
+    
+    h1 {
+        color: #222;
+        text-shadow: 0.5px 0px #222, 1.5px 0px #222; 
+        letter-spacing: 1px;
+        font-size: 0.8rem;
+    }
+      
+    h2 {
+        color: #222;
+        font-size: 0.8rem;
     }
 }
 
-h1 {
-    color: #222;
-    text-shadow: 0.5px 0px #222, 1.5px 0px #222; 
-    letter-spacing: 1px;
-    font-size: 0.8rem;
-}
-  
-h2 {
-    color: #222;
-    font-size: 0.8rem;
+.range-slider {
+    height: 1px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    border-top: 1.5px solid #000;
+    border-bottom: 1.5px solid #ffffff;
+    margin: 0 6px;
+    box-shadow:
+        inset -1.5px -1.5px #808080;
+
+    img {
+        height: 1.25rem;
+        position: absolute;
+        transform: translateY(-50%);
+    }
 }
