--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -51,8 +51,9 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 6px;
-    
-            .length-start, .length-end {
+
+            .length-start,
+            .length-end {
                 font-size: 0.8rem;
             }
 
@@ -69,14 +70,14 @@
             height: 1rem;
         }
     }
-    
+
     h1 {
         color: #222;
-        text-shadow: 0.5px 0px #222, 1.5px 0px #222; 
+        text-shadow: 0.5px 0px #222, 1.5px 0px #222;
         letter-spacing: 1px;
         font-size: 0.8rem;
     }
-      
+
     h2 {
         color: #222;
         font-size: 0.8rem;
@@ -84,20 +85,56 @@
 }
 
 .range-slider {
-    height: 1px;
+    -webkit-appearance: none;
+    appearance: none;
+    background: transparent;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    border-top: 1.5px solid #000;
-    border-bottom: 1.5px solid #ffffff;
-    margin: 0 6px;
-    box-shadow:
-        inset -1.5px -1.5px #808080;
 
-    img {
-        height: 1.25rem;
-        position: absolute;
-        transform: translateY(-50%);
+    &:focus {
+        outline: none;
+    }
+
+    &::-webkit-slider-runnable-track {
+        border-top: 1.5px solid #000;
+        border-bottom: 1.5px solid #ffffff;
+        height: 1px;
+        margin: 0 6px;
+        box-shadow:
+            inset -1.5px -1.5px #808080;
+    }
+
+    &::-moz-range-track {
+        border-top: 1.5px solid #000;
+        border-bottom: 1.5px solid #ffffff;
+        height: 1px;
+        margin: 0 6px;
+        box-shadow:
+            inset -1.5px -1.5px #808080;
+    }
+
+    &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        height: 21px;
+        width: 11px;
+        border: 0;
+        background-image: url('src/assets/player/cursor.png');
+        background-size: contain;
+        background-position: center center;
+        background-repeat: no-repeat;
+        margin-top: calc(0.5px - 21px/2);
+        cursor: pointer;
+    }
+
+    &::-moz-range-thumb {
+        height: 21px;
+        width: 11px;
+        border: 0;
+        background-image: url('src/assets/player/cursor.png');
+        background-size: contain;
+        background-position: center center;
+        background-repeat: no-repeat;
+        margin-top: calc(0.5px - 21px/2);
+        cursor: pointer;
     }
 }
